Complete the first minor step in testing the various IMAP driver variants.
Add server testing using a shared fixture.

--- a/TODO
+++ b/TODO
@@ -7,3 +7,7 @@
  - Do not hide the prefix of the shared namespace?
 
  - Fix the triggering decorator
+
+ - Test the Driver implementations
+
+   - getNamespace() [DONE]
