--- a/locale/fi/LC_MESSAGES/Horde_Kolab_Storage.po
+++ b/locale/fi/LC_MESSAGES/Horde_Kolab_Storage.po
@@ -1,67 +1,300 @@
 # Finnish translations for Horde_Kolab_Storage module.
 # Copyright (C) 2010 Horde Project
 # This file is distributed under the same license as the Horde_Kolab_Storage module.
-# Automatically generated, 2010.
+# Leena Heino <liinu@uta.fi>, 2010-2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Kolab_Storage\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-10-13 01:27+0200\n"
-"PO-Revision-Date: 2010-10-13 01:27+0200\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: i18n@lists.horde.org\n"
+"POT-Creation-Date: 2011-04-03 07:21+0300\n"
+"PO-Revision-Date: 2011-04-03 11:11:35+0300\n"
+"Last-Translator: Leena Heino <liinu@uta.fi>\n"
+"Language-Team: Finnish <i18n@lists.horde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: lib/Horde/Kolab/Storage/Folder/Base.php:993
-#: lib/Horde/Kolab/Storage/Folder/Base.php:999
-#, fuzzy, php-format
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:103
+#, php-format
+msgid "Connecting to server %s failed. Error: %s"
+msgstr "Yhteys palvelimeen %s epäonnitui. Virhelmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:113
+#, php-format
+msgid "Creating folder %s failed. Error: %s"
+msgstr "Kansion %s luonti epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:218
+#, php-format
+msgid "Creating folder %s%s failed. Error: %s"
+msgstr "Kansion %s%s luonti epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:136
+#, php-format
+msgid "Deleting folder %s failed. Error: %s"
+msgstr "Kansion %s poisto epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:245
+#, php-format
+msgid "Deleting folder %s%s failed. Error: %s"
+msgstr "Kansion %s%s poisto epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:691
+#, php-format
+msgid "Failed appending new message to folder %s%s. Error: %s"
+msgstr ""
+"Uuden viestin lisääminen kansioon %s%s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:602
+#, php-format
+msgid "Failed appending new message to folder %s. Error: %s"
+msgstr ""
+"Uuden viestin lisääminen kansioon %s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:277
+#, php-format
+msgid "Failed deleting ACL on folder %s for user %s. Error: %s"
+msgstr ""
+"Oikeuksien poisto kansiosta %s käyttäjältä %s epäonnistui. Virheilmoitus "
+"oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:724
+#, php-format
+msgid "Failed deleting message %s in folder %s. Error: %s"
+msgstr "Viestin %s poisto kansiosta %s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:629
+#, php-format
+msgid "Failed deleting messages from folder %s. Error: %s"
+msgstr "Viestien poisto kansiosta %s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:785
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:682
+#, php-format
+msgid "Failed expunging folder %s. Error: %s"
+msgstr ""
+"Poistettujen viestien tyhjennysä kansiosta %s epäonnistui. Virheilmoitus "
+"oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:657
+#, php-format
+msgid "Failed fetching body part %s for message %s in folder %s%s. Error: %s"
+msgstr ""
+"Viestin osion %s haku viestistä %s kansiossa %s epäonnistui. Virheilmoitus "
+"oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:590
+#, php-format
+msgid "Failed fetching message %s in folder %s%s. Error: %s"
+msgstr "Viestin %s haku kansiosta %s%s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:625
+#, php-format
+msgid ""
+"Failed fetching structure information for messages %s in folder %s%s. Error: "
+"%s"
+msgstr ""
+"Viestien %s rakennetietojen haku kansiosta %s%s epäonnistui. Virheilmoitus "
+"oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:758
+#, php-format
+msgid "Failed message %s from folder %s to folder %s. Error: %s"
+msgstr "Epäonnistui viestin %s kansiosta %s kansioon %s. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:658
+#, php-format
+msgid "Failed moving message %s from folder %s to folder %s. Error: %s"
+msgstr ""
+"Viestin %s siirto kansiosta %s kansioon %s epäonnistui. Virheilmoitus oli %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:502
+#, php-format
+msgid "Failed opening folder %s%s. Error: %s"
+msgstr "Kansion %s%s aukaisu epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:318
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:197
+#, php-format
+msgid "Failed reading ACL on folder %s. Error: %s"
+msgstr "Kansion %s oikeuksien lukeminen epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:346
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:225
+#, php-format
+msgid "Failed reading user rights on folder %s. Error: %s"
+msgstr ""
+"Käyttäjän oikeuksien lukeminen kansiosta %s epäonnistui. Virheilmoitus oli: "
+"%s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:467
+#, php-format
+msgid "Failed retrieving UIDs for folder %s. Error: %s"
+msgstr "UID tietojen haku kansiosta %s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:498
+#, php-format
+msgid "Failed retrieving message %s in folder %s. Error: %s"
+msgstr "Viestin %s haku kansiosta %s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:571
+#, php-format
+msgid "Failed retrieving mime part %s of message %s in folder %s. Error: %s"
+msgstr ""
+"Mime-osion %s haku viestistä %s kansiosta %s epäonnistui. Virheilmoitus oli: "
+"%s."
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:532
+#, php-format
+msgid "Failed retrieving status information for folder %s%s. Error: %s"
+msgstr "Tilatietojen haku kansiosta %s%s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:537
+#, php-format
+msgid "Failed retrieving structure of message %s in folder %s. Error: %s"
+msgstr ""
+"Viestin %s rakennetietojen haku kansiosta %s epäonnistui. Virheilmoitus oli: "
+"%s"
+
+#: lib/Horde/Kolab/Storage/Folder/Base.php:831
+#: lib/Horde/Kolab/Storage/Folder/Base.php:837
+#, php-format
 msgid "Failed retrieving the message with ID %s. Original error: %s."
-msgstr "IMAP-viestin %s haku epäonnistui. Virhe oli %s"
+msgstr "Viestin haku epäonnistui ID tunnisteella %s. Virheilmoitus oli: %s."
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:372
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:251
+#, php-format
+msgid "Failed setting ACL on folder %s for user %s to %s. Error: %s"
+msgstr ""
+"Oikeuksien asetus kansioon %s käyttäjälle %s muotoon %s epäonnistui. "
+"Virhheilmoitus oli: %s"
 
 #: lib/Horde/Kolab/Storage/Folder/Decorator/Trigger.php:228
-#, fuzzy, php-format
-msgid "Failed triggering folder %s. Error was: %s"
-msgstr "IMAP-viestin %s haku epäonnistui. Virhe oli %s"
-
-#: lib/Horde/Kolab/Storage/Data.php:630
 #, php-format
-msgid "Kolab cache: Object uid %s does not exist in the cache!"
-msgstr "Kolab välimuisti: Objekti uid %s ei ole välimuistissa!"
+msgid "Failed triggering folder %s. Error was: %s"
+msgstr "Kansion %s heräte epäonnistui. Virheilmoitus oli: %s"
 
-#: lib/Horde/Kolab/Storage/Data.php:315
+#: lib/Horde/Kolab/Storage/Factory.php:184
+#, php-format
+msgid ""
+"Invalid \"driver\" parameter \"%s\". Please use one of \"mock\", \"php\", "
+"\"pear\", \"horde\", \"horde-php\", and \"roundcube\"!"
+msgstr ""
+"Epäkelpo \"ajuri\" parametri \"%s\". Käytä jotakin näistä \"mock\", \"php\", "
+"\"pear\", \"horde\", \"horde-php\", and \"roundcube\"!"
+
+#: lib/Horde/Kolab/Storage/Factory.php:243
+#, php-format
+msgid "Invalid \"namespace\" type \"%s\"!"
+msgstr "Epäkelpo  \"nimiavaruus\" tyyppi \"%s\"!"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:182
+#, php-format
+msgid "Listing folders for %s failed. Error: %s"
+msgstr "Kansioiden listaus %s:lle epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Factory.php:141
+msgid "Missing \"driver\" parameter!"
+msgstr "Puuttuu \"ajuri\" parametri!"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:146
+msgid "Missing \"host\" parameter!"
+msgstr "Puuttuu \"palvelin\" parametri!"
+
+#: lib/Horde/Kolab/Storage/Data/Old.php:241
 #, php-format
 msgid "Old object %s does not exist."
 msgstr "Vanhaa objektia %s ei ole olemassa."
 
-#: lib/Horde/Kolab/Storage/Data.php:322
+#: lib/Horde/Kolab/Storage/Data/Old.php:248
 #, php-format
 msgid "Old object %s does not map to a uid."
-msgstr "Vanha objekti %s ei muunnut uid:ksi."
+msgstr "Vanha objekti %s ei muunnu uid:ksi."
 
-#: lib/Horde/Kolab/Storage/Folder/Base.php:832
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:163
+#, php-format
+msgid "Renaming folder %s to %s failed. Error: %s"
+msgstr "Kansion %s nimeäminen kansioksi %s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:274
+#, php-format
+msgid "Renaming folder %s%s to %s%s failed. Error: %s"
+msgstr ""
+"Kansion %s%s nimeäminen kansioksi %s%s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:441
+#, php-format
+msgid "Retrieving annotation %s[%s] on folder %s%s failed. Error: %s"
+msgstr "Lisätiedon %s[%s] kansiosta %s%s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:436
+#, php-format
+msgid "Retrieving the status for folder %s failed. Error: %s"
+msgstr "Tilatiedon haku kansiosta %s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:410
+#, php-format
+msgid "Selecting folder %s failed. Error: %s"
+msgstr "Kansion %s valinta epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:329
+#, php-format
+msgid "Setting annotation %s[%s] on folder %s failed. Error: %s"
+msgstr ""
+"Lisätiedon %s[%s] asetus kansioon %s epäonnistui. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:360
+#, php-format
+msgid "Setting annotation %s[%s] on folder %s to %s failed. Error: %s"
+msgstr ""
+"Lisätiedon %s[%s] asetus kansioon %s muotoon %s epäonnistui. Virheilmoitus "
+"oli: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:473
+#, php-format
+msgid "Setting annotation %s[%s] on folder %s%s to %s failed. Error: %s"
+msgstr ""
+"Lisätiedon %s[%s] asetus kansioon %s%s muotoon %s epäonnistui. Virheilmoitus "
+"oli: %s"
+
+#: lib/Horde/Kolab/Storage/Data/Cached.php:119
+#: lib/Horde/Kolab/Storage/Data/Base.php:220
+#, php-format
+msgid ""
+"The message with ID %s does not exist. This probably means that the Kolab "
+"object has been modified by somebody else since you retrieved the object "
+"from the backend. Original error: %s"
+msgstr ""
+"Viestiä ID:llä %s ei ole olemassa. Tämä todennäköisesti tarkoittaa, että "
+"jokin muu taho on muokannut Kolab-objekia sen jälkeen kun se haettiin "
+"taustajärjestelmästä. Virheilmoitus oli: %s"
+
+#: lib/Horde/Kolab/Storage/Folder/Base.php:670
 #, php-format
 msgid ""
 "The message with ID %s does not exist. This probably means that the Kolab "
 "object has been modified by somebody else while you were editing it. Your "
 "edits have been lost."
 msgstr ""
+"Viestiä ID:llä %s ei ole olemassa. Tämä todennäköisesti tarkoittaa, että "
+"Kolab-objekia on muokannut joku muu taho samaan aikaan oli editoimassa sitä. "
+"Tämän takia tekemäsi muutokset ovat kadonneet."
 
-#: lib/Horde/Kolab/Storage/Folder/Base.php:1054
+#: lib/Horde/Kolab/Storage/Data/Format/Mime.php:216
 #, php-format
 msgid ""
 "This is a Kolab Groupware object. To view this object you will need an email "
 "client that understands the Kolab Groupware format. For a list of such email "
 "clients please visit %s"
 msgstr ""
-"Tämä on Kolab Groupware objekti. Katsoaksesi tämän objektin sinulla pitää "
-"olla sähköpostiohjelma, joka ymmärtää Kolab Groupware formaattia. Lista "
+"Tämä on Kolab Groupware objekti. Katsoaksesi tämän objektin sisältöä sinulla "
+"pitää olla Kolab Groupwaren formaattia ymmärtävä sähköpostiohjelma. Lista "
 "yhteensopivista sähköpostiohjelmista löytyy osoitteesta %s"
 
-#: lib/Horde/Kolab/Storage/Folder/Base.php:391
+#: lib/Horde/Kolab/Storage/Folder/Base.php:353
 #, php-format
 msgid "Unable to rename %s to %s: destination folder already exists"
 msgstr ""
@@ -70,4 +303,4 @@ msgstr ""
 #: lib/Horde/Kolab/Storage/Folder/Decorator/Trigger.php:261
 #, php-format
 msgid "Unable to trigger URL %s. Response: %s"
-msgstr ""
+msgstr "Ei voida lähettää herätettä URLiin %s. Vastaus oli: %s"
