--- a/locale/lt/LC_MESSAGES/Horde_Kolab_Storage.po
+++ b/locale/lt/LC_MESSAGES/Horde_Kolab_Storage.po
@@ -1,57 +1,267 @@
 # Lithuanian translations for Horde_Kolab_Storage module.
-# Copyright (C) 2010 Horde Project
+# Copyright 2010-2011 The Horde Project
 # This file is distributed under the same license as the Horde_Kolab_Storage module.
-# Automatically generated, 2010.
+# Vilius Šumskas <vilius@lnk.lt>, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Horde_Kolab_Storage\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
-"POT-Creation-Date: 2010-10-13 01:27+0200\n"
-"PO-Revision-Date: 2010-10-13 01:27+0200\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: i18n@lists.horde.org\n"
+"POT-Creation-Date: 2011-05-28 01:09+0300\n"
+"PO-Revision-Date: 2011-06-28 00:41+0300\n"
+"Last-Translator: Vilius Šumskas <vilius@lnk.lt>\n"
+"Language-Team: Lithuanian <vilius@lnk.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
-"100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
+"%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: lib/Horde/Kolab/Storage/Folder/Base.php:993
-#: lib/Horde/Kolab/Storage/Folder/Base.php:999
-#, fuzzy, php-format
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:103
+#, php-format
+msgid "Connecting to server %s failed. Error: %s"
+msgstr "Prisijungti prieš serverio %s nepavyko. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:113
+#, php-format
+msgid "Creating folder %s failed. Error: %s"
+msgstr "Nepavyko sukurti %s katalogo. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:218
+#, php-format
+msgid "Creating folder %s%s failed. Error: %s"
+msgstr "Nepavyko sukurti %s%s katalogo. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:136
+#, php-format
+msgid "Deleting folder %s failed. Error: %s"
+msgstr "Nepavyko ištrinti %s katalogo. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:245
+#, php-format
+msgid "Deleting folder %s%s failed. Error: %s"
+msgstr "Nepavyko ištrinti %s%s katalogo. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:691
+#, php-format
+msgid "Failed appending new message to folder %s%s. Error: %s"
+msgstr "Į katalogą %s%s nepavyko pridėti naujų laiškų. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:602
+#, php-format
+msgid "Failed appending new message to folder %s. Error: %s"
+msgstr "Į katalogą %s nepavyko pridėti naujų laiškų. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:277
+#, php-format
+msgid "Failed deleting ACL on folder %s for user %s. Error: %s"
+msgstr "Nuo katalogo %s nepavyko nuimti vartotojo %s teisių. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:724
+#, php-format
+msgid "Failed deleting message %s in folder %s. Error: %s"
+msgstr "Nepavyko ištrinti laiško %s iš katalogo %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:629
+#, php-format
+msgid "Failed deleting messages from folder %s. Error: %s"
+msgstr "Iš katalogo %s nepavyko ištrinti laiškų. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:785
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:682
+#, php-format
+msgid "Failed expunging folder %s. Error: %s"
+msgstr "Nepavyko išvalyti katalogo %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:657
+#, php-format
+msgid "Failed fetching body part %s for message %s in folder %s%s. Error: %s"
+msgstr "Nepavyko gauti laiško dalies %s iš laiško %s kataloge %s%s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:590
+#, php-format
+msgid "Failed fetching message %s in folder %s%s. Error: %s"
+msgstr "Nepavyko gauti laiško %s kataloge %s%s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:625
+#, php-format
+msgid ""
+"Failed fetching structure information for messages %s in folder %s%s. Error: "
+"%s"
+msgstr ""
+"Nepavyko gauti laiško %s struktūros informacijos kataloge %s%s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:758
+#, php-format
+msgid "Failed message %s from folder %s to folder %s. Error: %s"
+msgstr "Nepavyko perkelti laiško %s iš katalogo %s į katalogą %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:658
+#, php-format
+msgid "Failed moving message %s from folder %s to folder %s. Error: %s"
+msgstr "Nepavyko perkelti laiško %s iš katalogo %s į katalogą %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:502
+#, php-format
+msgid "Failed opening folder %s%s. Error: %s"
+msgstr "Nepavyko atidaryti katalogo %s%s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:318
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:197
+#, php-format
+msgid "Failed reading ACL on folder %s. Error: %s"
+msgstr "Nepavyko perskaityti katalogo %s teisių. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:346
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:225
+#, php-format
+msgid "Failed reading user rights on folder %s. Error: %s"
+msgstr "Nepavyko perskaityti katalogo %s vartotojo teisių. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:467
+#, php-format
+msgid "Failed retrieving UIDs for folder %s. Error: %s"
+msgstr "Nepavyko gauti katalogo %s UID. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:498
+#, php-format
+msgid "Failed retrieving message %s in folder %s. Error: %s"
+msgstr "Nepavyko gauti laiško %s kataloge %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:571
+#, php-format
+msgid "Failed retrieving mime part %s of message %s in folder %s. Error: %s"
+msgstr "Nepavyko gauti mime dalies %s iš laiško %s kataloge %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:532
+#, php-format
+msgid "Failed retrieving status information for folder %s%s. Error: %s"
+msgstr "Nepavyko gauti katalogo %s būsenos informacijos. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:537
+#, php-format
+msgid "Failed retrieving structure of message %s in folder %s. Error: %s"
+msgstr ""
+"Nepavyko gauti laiško %s struktūros informacijos kataloge %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Folder/Base.php:831
+#: lib/Horde/Kolab/Storage/Folder/Base.php:837
+#, php-format
 msgid "Failed retrieving the message with ID %s. Original error: %s."
-msgstr "Nepavyko gauti IMAP laiško %s. Įvykusi klaida %s"
+msgstr "Nepavyko gauti laiško, kurio ID %s. Klaida: %s."
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:372
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:251
+#, php-format
+msgid "Failed setting ACL on folder %s for user %s to %s. Error: %s"
+msgstr "Nepavyko pakeisti katalogo %s teisių vartotojui %s į %s. Klaida: %s"
 
 #: lib/Horde/Kolab/Storage/Folder/Decorator/Trigger.php:228
-#, fuzzy, php-format
-msgid "Failed triggering folder %s. Error was: %s"
-msgstr "Nepavyko gauti IMAP laiško %s. Įvykusi klaida %s"
-
-#: lib/Horde/Kolab/Storage/Data.php:630
 #, php-format
-msgid "Kolab cache: Object uid %s does not exist in the cache!"
-msgstr "Kolab kešas: keše nėra objekto uid %s!"
+msgid "Failed triggering folder %s. Error was: %s"
+msgstr "Nepavyko pasiekti katalogo %s. Klaida: %s"
 
-#: lib/Horde/Kolab/Storage/Data.php:315
+#: lib/Horde/Kolab/Storage/Factory.php:184
+#, php-format
+msgid ""
+"Invalid \"driver\" parameter \"%s\". Please use one of \"mock\", \"php\", "
+"\"pear\", \"horde\", \"horde-php\", and \"roundcube\"!"
+msgstr ""
+"Neleistinas \"driver\" parametras \"%s\". Naudokite \"mock\", \"php\", \"pear"
+"\", \"horde\", \"horde-php\" arba \"roundcube\"!"
+
+#: lib/Horde/Kolab/Storage/Factory.php:246
+#, php-format
+msgid "Invalid \"namespace\" type \"%s\"!"
+msgstr "Neleistinas \"namespace\" tipas \"%s\"!"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:182
+#, php-format
+msgid "Listing folders for %s failed. Error: %s"
+msgstr "Nepavyko parodyti %s katalogų. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Factory.php:141
+msgid "Missing \"driver\" parameter!"
+msgstr "Nėra \"driver\" parametro!"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:146
+msgid "Missing \"host\" parameter!"
+msgstr "Nėra \"host\" parametro!"
+
+#: lib/Horde/Kolab/Storage/Data/Old.php:241
 #, php-format
 msgid "Old object %s does not exist."
 msgstr "Senasis objektas %s neegzistuoja"
 
-#: lib/Horde/Kolab/Storage/Data.php:322
+#: lib/Horde/Kolab/Storage/Data/Old.php:248
 #, php-format
 msgid "Old object %s does not map to a uid."
 msgstr "Senasis objektas %s nesurištas su uid."
 
-#: lib/Horde/Kolab/Storage/Folder/Base.php:832
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:163
+#, php-format
+msgid "Renaming folder %s to %s failed. Error: %s"
+msgstr "Nepavyko pervadinti katalogo iš %s į %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:274
+#, php-format
+msgid "Renaming folder %s%s to %s%s failed. Error: %s"
+msgstr "Nepavyko pervadinti katalogo iš %s%s į %s%s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:441
+#, php-format
+msgid "Retrieving annotation %s[%s] on folder %s%s failed. Error: %s"
+msgstr "Nepavyko gauti anotacijos %s[%s] katalogui %s%s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:436
+#, php-format
+msgid "Retrieving the status for folder %s failed. Error: %s"
+msgstr "Nepavyko gauti katalogo %s būsenos. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:410
+#, php-format
+msgid "Selecting folder %s failed. Error: %s"
+msgstr "Nepavyko pasirinkti katalogo %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:329
+#, php-format
+msgid "Setting annotation %s[%s] on folder %s failed. Error: %s"
+msgstr "Nepavyko pakeisti anotacijos %s[%s] katalogui %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Rcube.php:360
+#, php-format
+msgid "Setting annotation %s[%s] on folder %s to %s failed. Error: %s"
+msgstr "Nepavyko pakeisti anotacijos %s[%s] katalogui %s į %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Driver/Cclient.php:473
+#, php-format
+msgid "Setting annotation %s[%s] on folder %s%s to %s failed. Error: %s"
+msgstr "Nepavyko pakeisti anotacijos %s[%s] katalogui %s%s į %s. Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Data/Base.php:220
+#: lib/Horde/Kolab/Storage/Data/Cached.php:120
+#, php-format
+msgid ""
+"The message with ID %s does not exist. This probably means that the Kolab "
+"object has been modified by somebody else since you retrieved the object "
+"from the backend. Original error: %s"
+msgstr ""
+"Laiškas, kurio ID %s, neegzistuoja. Tai dažniausiai reiškia, kad kas nors "
+"kitas pakeitė šį Kolab objektą po to, kai jūs paėmėte jį iš posistemės. "
+"Klaida: %s"
+
+#: lib/Horde/Kolab/Storage/Folder/Base.php:670
 #, php-format
 msgid ""
 "The message with ID %s does not exist. This probably means that the Kolab "
 "object has been modified by somebody else while you were editing it. Your "
 "edits have been lost."
 msgstr ""
+"Laiškas, kurio ID %s, neegzistuoja. Tai dažniausiai reiškia, kad kas nors "
+"kitas pakeitė šį Kolab objektą kol jūs jį redagavote. Jūsų pakeitimai buvo "
+"prarasti."
 
-#: lib/Horde/Kolab/Storage/Folder/Base.php:1054
+#: lib/Horde/Kolab/Storage/Data/Format/Mime.php:216
 #, php-format
 msgid ""
 "This is a Kolab Groupware object. To view this object you will need an email "
@@ -62,7 +272,7 @@ msgstr ""
 "el. pašto klientą, kuris suprantą šį formatą. Tokių el. pašto klientų sąrašą "
 "galite rasti apsilankę %s"
 
-#: lib/Horde/Kolab/Storage/Folder/Base.php:391
+#: lib/Horde/Kolab/Storage/Folder/Base.php:353
 #, php-format
 msgid "Unable to rename %s to %s: destination folder already exists"
 msgstr "Nepavyko pervadinti %s į %s: toks katalogas jau egzistuoja"
@@ -70,4 +280,4 @@ msgstr "Nepavyko pervadinti %s į %s: toks katalogas jau egzistuoja"
 #: lib/Horde/Kolab/Storage/Folder/Decorator/Trigger.php:261
 #, php-format
 msgid "Unable to trigger URL %s. Response: %s"
-msgstr ""
+msgstr "Nepavyko sužadinti URL adreso %s. Atsakymas: %s"
