--- a/locale/de/LC_MESSAGES/Horde_Kolab_Storage.po
+++ b/locale/de/LC_MESSAGES/Horde_Kolab_Storage.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Horde_Kolab_Storage\n"
 "Report-Msgid-Bugs-To: dev@lists.horde.org\n"
 "POT-Creation-Date: 2012-08-29 13:30+0200\n"
-"PO-Revision-Date: 2012-07-19 21:32+0200\n"
+"PO-Revision-Date: 2012-10-02 18:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: i18n@lists.horde.org\n"
 "Language: \n"
@@ -278,10 +278,7 @@ msgid ""
 "This is a Kolab Groupware object. To view this object you will need an email "
 "client that understands the Kolab Groupware format. For a list of such email "
 "clients please visit %s"
-msgstr ""
-"Die ist ein Kolab-Groupware-Objekt. Um dieses Objekt anzuzeigen, benötigen "
-"Sie ein E-Mail-Programm, das das Kolab-Groupware-Format unterstützt. Eine "
-"Liste solcher Programme finden Sie unter %s"
+msgstr "Dies ist ein Kolab-Groupware-Objekt. Um dieses Objekt anzuzeigen, benötigen Sie ein E-Mail-Programm, das das Kolab-Groupware-Format unterstützt. Eine Liste solcher Programme finden Sie unter %s"
 
 #: doc/Horde/Kolab/Storage/OLD/Folder.php:368
 #, php-format
